--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="@dimen/spacing_normal"
         android:layout_marginStart="@dimen/spacing_normal"
         android:layout_marginLeft="@dimen/spacing_normal"
-        android:text="https://demo.traccar.org" />
+        android:text="http://tracking.data-trak.co.uk" />
 
     <TextView
         android:id="@+id/label_info"
